# Life

./: CMakeLists.txt  README.txt
Neural_net_attempt_two/: CMakeLists.txt
Neural_net_attempt_two/Brain/: Brain.cpp  Brain.h
Neural_net_attempt_two/Dense_Layer/: Dense_Layer.cpp  Dense_Layer.h
Neural_net_attempt_two/Input_Layer/: Input_layer.cpp  Input_layer.h
Neural_net_attempt_two/Layer/: Layer.cpp  Layer.h
Neural_net_attempt_two/Reccurent_Layer/: Reccurent_Layer.h
Neural_net_attempt_two/Tests/: all_tests.cpp  tests.cpp  tests.h
Source_files/: Life.cpp
Source_files/body_parts/: body_parts.cpp  body_parts.h
Source_files/brain/: brain.cpp  brain.h
Source_files/field/: field.cpp  field.h
Source_files/place/: place.cpp  place.h
Source_files/predator/: pred.cpp  pred.h  pred_brain.cpp  pred_brain.h  pred_params.cpp  pred_params.h
Source_files/sell/: sell.cpp  sell.h  sell_brain.cpp  sell_brain.h  sell_params.cpp  sell_params.h
Source_files/unit/: unit.cpp  unit.h  unit_params.cpp  unit_params.h
